# bgfx_vsbuild

./: .gitmodules  CMakeLists.txt  genvs2015.cmd  update.sh
