project(bgfx)

macro(source_group_by_dir source_files)
    if(MSVC)
        set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
        foreach(sgbd_file ${${source_files}})
            string(REGEX REPLACE ${sgbd_cur_dir}/\(.*\) \\1 sgbd_fpath ${sgbd_file})
            string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
            string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
            string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
            if(sgbd_nogroup)
                set(sgbd_group_name "\\")
            endif(sgbd_nogroup)
            source_group(${sgbd_group_name} FILES ${sgbd_file})
        endforeach(sgbd_file)
    endif(MSVC)
endmacro(source_group_by_dir)


include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../bx)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../bx/include)
IF(MSVC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../bx/include/compat/msvc)
ENDIF(MSVC)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/khronos)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/dxsdk/include)

IF(MSVC)
#add_definitions(-DBGFX_CONFIG_RENDERER_DIRECT3D12=0)
ENDIF(MSVC)


FILE(GLOB_RECURSE INC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE SRC_H_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
FILE(GLOB_RECURSE SRC_SC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.sc)
#FILE(GLOB_RECURSE THIRD_CPP ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/*.cpp)
#FILE(GLOB_RECURSE THIRD_C ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/*.c)
#FILE(GLOB_RECURSE THIRD_H ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/*.h)

SET(ALL_SRC ${INC_FILES} ${SRC_FILES} ${SRC_H_FILES} ${SRC_SC_FILES})
source_group_by_dir(ALL_SRC)

ADD_LIBRARY(bgfx  SHARED ${ALL_SRC})
TARGET_LINK_LIBRARIES(bgfx Psapi.lib)